<resources>
    <string name="app_name">Entrevoisins</string>
    <string name="tab_neighbour_title">My neighbours</string>
    <string name="tab_favorites_title">Favorites</string>
    <string name="activity_new_neighbour">New neighbour</string>
    <string name="activity_profile_neighbour">Profile neighbour</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="telephone">Telephone</string>
    <string name="adresse">Adresse</string>
    <string name="reseau_social">www.facebook.fr/</string>
    <string name="a_propos_de_moi">A propos de moi</string>
    <string name="description">Description</string>
    <string name="photo">photo</string>
    <string name="poubelle">poubelle</string>
    <string name="save">Save</string>
    <string name="fab_favorite">FAB_favorite</string>
</resources>
